After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 317806 - gnumeric crashes when trying to insert a new row
gnumeric crashes when trying to insert a new row
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
unspecified
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-10-03 09:16 UTC by Paolo Baldan
Modified: 2005-10-06 11:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
File over which gnumeric crashes when try to insert a new row (11.34 KB, application/x-gnumeric)
2005-10-03 17:13 UTC, Paolo Baldan
Details

Description Paolo Baldan 2005-10-03 09:16:32 UTC
Distribution: Debian testing/unstable
Package: Gnumeric
Severity: normal
Version: GNOME2.10.2 unspecified
Gnome-Distributor: Debian
Synopsis: gnumeric crashes when trying to insert a new row
Bugzilla-Product: Gnumeric
Bugzilla-Component: General
Bugzilla-Version: unspecified
BugBuddy-GnomeVersion: 2.0 (2.10.1)
Description:
Description of the crash:
Opening a gnumeric file (produced wth an older version of gnumeric) and
trying to insert a new row in a spreadsheet, the application crashes

Steps to reproduce the crash:
Unfortunately this is weird. It is happening only with this specific
spreadsheet and only if I am trying to insert a row in the middle of the
table.

How often does this happen?
Always, with this specific file.

Additional Information:



Debugging Information:

Backtrace was generated from '/usr/bin/gnumeric'

(no debugging symbols found)
Using host libthread_db library "/lib/tls/libthread_db.so.1".
(no debugging symbols found)
`system-supplied DSO at 0xffffe000' has disappeared; keeping its
symbols.
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 1092351648 (LWP 24674)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0x403b6b1e in waitpid () from /lib/tls/libc.so.6

Thread 1 (Thread 1092351648 (LWP 24674))

  • #0 waitpid
    from /lib/tls/libc.so.6
  • #1 libgnomeui_module_info_get
    from /usr/lib/libgnomeui-2.so.0
  • #2 <signal handler called>
  • #3 sheet_flag_status_update_range
    from /usr/lib/libspreadsheet.so.0
  • #4 dependents_relocate
    from /usr/lib/libspreadsheet.so.0
  • #5 sheet_insert_rows
    from /usr/lib/libspreadsheet.so.0
  • #6 cmd_area_set_text
    from /usr/lib/libspreadsheet.so.0
  • #7 command_list_release
    from /usr/lib/libspreadsheet.so.0
  • #8 cmd_insert_rows
    from /usr/lib/libspreadsheet.so.0
  • #9 dialog_insert_cells
    from /usr/lib/libspreadsheet.so.0
  • #10 scg_colrow_size_set
    from /usr/lib/libspreadsheet.so.0
  • #11 gnm_glade_xml_new
    from /usr/lib/libspreadsheet.so.0
  • #12 g_cclosure_marshal_VOID__VOID
    from /usr/lib/libgobject-2.0.so.0
  • #13 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #14 g_signal_stop_emission
    from /usr/lib/libgobject-2.0.so.0
  • #15 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #16 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #17 gtk_widget_activate
    from /usr/lib/libgtk-x11-2.0.so.0
  • #18 gtk_menu_shell_activate_item
    from /usr/lib/libgtk-x11-2.0.so.0
  • #19 gtk_menu_shell_activate_item
    from /usr/lib/libgtk-x11-2.0.so.0
  • #20 gtk_menu_reorder_child
    from /usr/lib/libgtk-x11-2.0.so.0
  • #21 _gtk_marshal_BOOLEAN__BOXED
    from /usr/lib/libgtk-x11-2.0.so.0
  • #22 g_cclosure_new_swap
    from /usr/lib/libgobject-2.0.so.0
  • #23 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #24 g_signal_stop_emission
    from /usr/lib/libgobject-2.0.so.0
  • #25 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #26 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #27 gtk_widget_activate
    from /usr/lib/libgtk-x11-2.0.so.0
  • #28 gtk_propagate_event
    from /usr/lib/libgtk-x11-2.0.so.0
  • #29 gtk_main_do_event
    from /usr/lib/libgtk-x11-2.0.so.0
  • #30 _gdk_events_queue
    from /usr/lib/libgdk-x11-2.0.so.0
  • #31 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #32 g_main_context_check
    from /usr/lib/libglib-2.0.so.0
  • #33 g_main_loop_run
    from /usr/lib/libglib-2.0.so.0
  • #34 bonobo_main
    from /usr/lib/libbonobo-2.so.0
  • #35 main
  • #0 waitpid
    from /lib/tls/libc.so.6




------- Bug moved to this database by unknown@gnome.bugs 2005-10-03 09:16 UTC -------


The original reporter of this bug does not have
   an account here. Reassigning to the person who moved
   it here, unknown@gnome.bugs.
   Previous reporter was baldan@dsi.unive.it.

Comment 1 Jody Goldberg 2005-10-03 14:17:00 UTC
Could you attach a copy of the file or email a copy to me ?
Comment 2 Paolo Baldan 2005-10-03 17:13:13 UTC
Created attachment 52987 [details]
File over which gnumeric crashes when try to insert a new row

File ver which gnumeric crashes when try to insert a new row.
The crash should be obtainable by going to the Sheet "Gruppi" and trying to add
at row 79, a new row.
Comment 3 Jody Goldberg 2005-10-06 11:22:47 UTC
The patch will be in 1.6.0
Thank you