http://bugzilla.gnome.org/show_bug.cgi?id=317806 do not collect dynamic

2005-10-04  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=317806
	* src/dependent.c (cb_single_contained_collect) : do not collect
	  dynamic depends they may get cleared.
	(cb_range_contained_collect) : ditto.