src/dependent.c
@@ -1543,7 +1543,8 @@ cb_range_contained_collect (DependencyRange const *deprange,
 
 	if (range_overlap (user->target, range))
 		micro_hash_foreach_dep (deprange->deps, dep, {
-			if (!(dep->flags & (DEPENDENT_FLAGGED | DEPENDENT_CAN_RELOCATE))) {
+			if (!(dep->flags & (DEPENDENT_FLAGGED | DEPENDENT_CAN_RELOCATE)) &&
+			    dependent_type (dep) != DEPENDENT_DYNAMIC_DEP) {
 				dep->flags |= DEPENDENT_FLAGGED;
 				user->list = g_slist_prepend (user->list, dep);
 			}});
@@ -1556,7 +1557,8 @@ cb_single_contained_collect (DependencySingle const *depsingle,
 {
 	if (range_contains (user->target, depsingle->pos.col, depsingle->pos.row))
 		micro_hash_foreach_dep (depsingle->deps, dep, {
-			if (!(dep->flags & (DEPENDENT_FLAGGED | DEPENDENT_CAN_RELOCATE))) {
+			if (!(dep->flags & (DEPENDENT_FLAGGED | DEPENDENT_CAN_RELOCATE)) &&
+			    dependent_type (dep) != DEPENDENT_DYNAMIC_DEP) {
 				dep->flags |= DEPENDENT_FLAGGED;
 				user->list = g_slist_prepend (user->list, dep);
 			}});
